# TCP-File-Transfer

./: .gitignore  CMakeLists.txt
src/client/: client.cpp  client.h  client.hpp  main.cpp
src/common/: log_writer.cpp  log_writer.h
src/daemon/: config.h  daemon.h  daemon_body.cpp  daemon_body.h  detail.h  error_worker.h  log_writer.cpp  log_writer.h  main.cpp  monitor_proc.cpp  monitor_proc.h
src/daemon/detail/: config.h  daemon_body.cpp  daemon_body.h  detail.h  error_worker.h  monitor_proc.cpp  monitor_proc.h
src/server/: main.cpp  server.cpp  server.h  server.hpp  session.cpp  session.h
test_files/: k8bvkj  worfzf
